@@ -964,8 +964,7 @@ CLEANFILES = bfd.h dep.sed stmp-bfd-h DEP DEPA DEP1 DEP2 libbfd.a stamp-lib \
 DISTCLEANFILES = $(BUILD_CFILES) $(BUILD_HFILES)
 
 bfdver.h: $(srcdir)/version.h $(srcdir)/Makefile.in
-	@-test -d doc || mkdir doc
-	@echo "creating $@ and doc/bfdver.texi"
+	@echo "creating $@"
 	@bfd_version=`echo "$(VERSION)" | sed -e 's/\([^\.]*\)\.*\([^\.]*\)\.*\([^\.]*\)\.*\([^\.]*\)\.*\([^\.]*\).*/\1.00\2.00\3.00\4.00\5/' -e 's/\([^\.]*\)\..*\(..\)\..*\(..\)\..*\(..\)\..*\(..\)$$/\1\2\3\4\5/'` ;\
 	bfd_version_string="\"$(VERSION)\"" ;\
 	bfd_version_package="\"$(PKGVERSION)\"" ;\
@@ -978,15 +977,7 @@ bfdver.h: $(srcdir)/version.h $(srcdir)/Makefile.in
 	    -e "s,@bfd_version_string@,$$bfd_version_string," \
 	    -e "s,@bfd_version_package@,$$bfd_version_package," \
 	    -e "s,@report_bugs_to@,$$report_bugs_to," \
-	    < $(srcdir)/version.h > $@; \
-	 echo "@set VERSION $(VERSION)" > doc/bfdver.texi; \
-	 if [ -n "$(PKGVERSION)" ]; then \
-	   echo "@set VERSION_PACKAGE $(PKGVERSION)" >> doc/bfdver.texi; \
-	 fi; \
-	 echo "@set UPDATED `date '+%B %Y'`" >> doc/bfdver.texi; \
-	 if [ -n "$(REPORT_BUGS_TEXI)" ]; then \
-	   echo "@set BUGURL $(REPORT_BUGS_TEXI)" >> doc/bfdver.texi; \
-	 fi
+	    < $(srcdir)/version.h > $@
 
 # What appears below is generated by a hacked mkdep using gcc -MM.
 
