@@ -1,3 +1,10 @@
+2007-04-09  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* Makefile.am (bfdver.h): Do not generate doc/bfdver.texi.
+	* doc/Makefile.am (DOCFILES): Add bfdver.texi.
+	(bfdver.texi): New rule.
+	* Makefile.in, doc/Makefile.in: Regenerated.
+
 2007-04-03  Matt Thomas  <matt@netbsd.org>
 
 	* elf32-vax.c (elf_vax_relocate_section): Do not emit a PCREL reloc 
